--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,8 @@
     width: 300px;
     height: 350px;
     margin: 20px;
+    margin-right: 3%;
+    margin-bottom: 4%;
 }
 
 .card .face {
@@ -231,3 +233,66 @@
     transform: translateY(-40px);
     transition: 0.5s;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ********************************style card-categorie  */
+
+
+.card-categorie{
+    margin: 10px;
+    width: 300px;
+    height: 400px;
+    position: relative;
+    background-color: white;
+    overflow: hidden;
+    box-shadow: 1px 1px 0.5vw black;
+    border-radius: 0.5vw;
+
+    margin-right:3%;
+    margin-bottom: 3%;
+    cursor: pointer;
+}
+.card-categorie .img{
+    width: 100%;
+    height: 320px;
+}
+.card-categorie .img img{
+    width: 100%;
+    height: 100%;
+}
+.card-categorie .content{
+    width: 100%;
+    height: 80px;
+    position: absolute;
+    bottom: 0;
+    background-color: darkslategrey;
+    transition: 0.5s;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.card-categorie .content h1{
+    margin-top: 10px;
+    letter-spacing: 1px;
+    color: white;
+    text-align: center;
+}
+.card-categorie .content p{
+    text-align: justify;
+    /* letter-spacing: 1px; */
+    color: rgba(255, 255, 255, 0.8);
+}
+.card-categorie:hover .content{
+    height: 215px;
+}
+
